--- a/03_BadData.ipynb
+++ b/03_BadData.ipynb
@@ -110,7 +110,8 @@
     "    prop = [0, 0, 0, 1]\n",
     "\n",
     "    for index, row in df.iterrows():\n",
-    "\n",
+    "        if index == (df.shape[0]-1): \n",
+    "            break\n",
     "        # stopped or changed direction\n",
     "        if ((row[-1] == 0.0) & (row[-1] != df.iloc[index + 1, -1])) | ((row[-1] != 0.0) & ((row[-1] + df.iloc[index + 1, -1]) == 0.0)): \n",
     "            current_floor = float(row[8].strip())\n",
@@ -146,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_label_stuff(df):\n",
+    "def generate_label_stuff(df, save_path):\n",
     "    # generate labels\n",
     "    df4 = df.copy()\n",
     "    last_index = 0\n",
@@ -194,7 +195,7 @@
     "            queue = np.delete(queue, np.where(queue[:, 1] < 0), axis=0)\n",
     "\n",
     "    df_labels = pd.DataFrame(labels)\n",
-    "    #df_labels.to_csv('./' + ''.join(save_path.split('.')[:-1]) + '_label.csv', index=False)\n",
+    "    df_labels.to_csv('./' + ''.join(save_path.split('.')[:-1]) + '_label.csv', index=False)\n",
     "    \n",
     "    # normalize floor\n",
     "    df4.loc[:, 'Floor'] = (df4.loc[:, 'Floor'].astype(float) - 1.0) / 6.0\n",
@@ -203,8 +204,8 @@
     "    encoder = OneHotEncoder(categories=[[1., 2., 3., 4., 5., 6., 7.]], sparse=False)\n",
     "    df_oh = pd.DataFrame(encoder.fit_transform(df_labels))\n",
     "\n",
-    "    # df_oh.to_csv('./' + ''.join(save_path.split('.')[:-1]) + '_label_oh.csv', index=False)\n",
-    "    #df4.to_csv(save_path, index=False)\n",
+    "    df_oh.to_csv('./' + ''.join(save_path.split('.')[:-1]) + '_label_oh.csv', index=False)\n",
+    "    df4.to_csv(save_path, index=False)\n",
     "\n",
     "    return df4[:df_labels.shape[0]], df_labels, df_oh"
    ]
@@ -215,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, y_train, y_train_oh = generate_label_stuff(df1)"
+    "X_train, y_train, y_train_oh = generate_label_stuff(df1, './data/mid_part.csv')"
    ]
   }
  ],
